--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = 'http://www.google.com';
+        window.location.href = 'http://youtube.com';
     </script>
 </body>
 </html>
